[gd_scene load_steps=9 format=2]

[ext_resource path="res://arial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://seta_esq.png" type="Texture" id=2]
[ext_resource path="res://seta_dir.png" type="Texture" id=3]
[ext_resource path="res://scripts/InstrucoesPaginas.gd" type="Script" id=4]
[ext_resource path="res://instructions_video/bloco_selecao.webm" type="VideoStream" id=5]
[ext_resource path="res://scripts/VideoInstrucoes.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 1 )

[node name="Instrucoes" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Instrucoes" type="Label" parent="."]
margin_left = 348.0
margin_top = 65.0
margin_right = 797.0
margin_bottom = 305.0
custom_fonts/font = SubResource( 1 )
text = "Clique em um bloco para selecioná-lo. Clique no bloco selecionado para desselecioná-lo."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Voltar" type="Button" parent="."]
margin_left = 540.0
margin_top = 547.0
margin_right = 626.0
margin_bottom = 585.0
custom_fonts/font = SubResource( 2 )
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Pag_Post" type="Button" parent="."]
margin_left = 833.0
margin_top = 135.0
margin_right = 1445.0
margin_bottom = 741.0
rect_scale = Vector2( 0.16, 0.16 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Pag_Ant" type="Button" parent="."]
margin_left = 208.0
margin_top = 135.0
margin_right = 820.0
margin_bottom = 741.0
rect_scale = Vector2( 0.16, 0.16 )
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX" type="AudioStreamPlayer" parent="."]

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_left = 394.0
margin_top = 326.0
margin_right = 768.0
margin_bottom = 527.0
stream = ExtResource( 5 )
autoplay = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="Button_Voltar" to="." method="_on_Button_Voltar_button_up"]
[connection signal="button_up" from="Button_Pag_Post" to="." method="pagina_posterior_instrucoes"]
[connection signal="button_up" from="Button_Pag_Ant" to="." method="pagina_anterior_instrucoes"]
[connection signal="finished" from="VideoPlayer" to="VideoPlayer" method="_on_VideoPlayer_finished"]
